load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mpsc",
    srcs = ["queue.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/kv/kvserver/mpsc",
    visibility = ["//visibility:public"],
)

go_test(
    name = "mpsc_test",
    srcs = ["queue_test.go"],
    embed = [":mpsc"],
    deps = ["//pkg/util/syncutil"],
)
